--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'myapp/css/base.css' %}" />
     {% block extra_style %}{% endblock %}
-    <title>DeMiAインターン</title>
+    <title>DeMiAインターン {% block title %}{% endblock %}</title>
 </head>
 <body>
     {% block header %}
