--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -1,1 +1,39 @@
-I
+<!DOCTYPE html>
+<html lang="ja">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport">
+        <title>my app:チャットアプリ:ログイン
+        </title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+         <style>
+            .login-div, .signup-div {
+                border: solid 2px gray;
+                border-radius: 15%;
+                background-color: #fff;
+                padding: 2% 4%;
+                text-align: center;
+                font-size: 250%;
+                width: 25vw;
+                margin: 0 27vw;
+                font-family: "Noto Sans JP", sans-serif;
+            }
+
+            a {
+                text-decoration: none;
+                color: #000;
+            }
+
+            .login-div {
+                margin-top: 45vh;
+                margin-bottom: 2vh;
+            }
+         </style>
+    </head>
+    <body>
+        <div class="login-div"><a href="{% url 'login_view' %}" class="login">ログイン</a></div>
+        <div class="signup-div"><a href="{% url 'signup_view' %}" class="signup">会員登録</a></div>
+    </body>
+</html>
