--- a/myapp/templates/myapp/login.html
+++ b/myapp/templates/myapp/login.html
@@ -4,10 +4,11 @@
 
 {% block content %}
     <div class="content">
-        <form method="post">
+        <form method="post" action="{% url 'login_view' %}">
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit">ログイン</button>
         </form>
     </div>
 {% endblock %}
+{% block footer %}  {% endblock %}
