--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -32,6 +32,18 @@
                 </a>
             </div>
             <div class="footer-container__item">
+                <a href="{% url 'user_list' %}" class="footer-item__link">
+                    <span class="footer-item__icon"><img src="{% static 'myapp/img/people-24px.svg' %}"></span>
+                    <span class="footer-item__text">全ユーザー</span>
+                </a>
+            </div>
+            <div class="footer-container__item">
+                <a href="{% url 'friend_request_list' %}" class="footer-item__link">
+                    <span class="footer-item__icon"><img src="{% static 'myapp/img/people-24px.svg' %}"></span>
+                    <span class="footer-item__text">フレンドリクエスト</span>
+                </a>
+            </div>
+            <div class="footer-container__item">
                 <a href="{% url 'setting' %}" class="footer-item__link">
                     <span class="footer-item__icon"><img src="{% static 'myapp/img/settings-black-18dp.svg' %}"></span>
                     <span class="footer-item__text">設定</span>
