--- a/myapp/templates/myapp/friends.html
+++ b/myapp/templates/myapp/friends.html
@@ -1,19 +1,36 @@
 {% extends "myapp/base.html" %}
 {% block title %}friends{% endblock %}
 {% block header-title %}友達{% endblock %}
-
+{% load static %}
+{% block extra_style %}
+<link rel="stylesheet" href="../../static/myapp/css/friends.css">
+{% endblock %}
 {% block content %}
-<div class="friends">
-    {% for %}
-    <div class="each">
-        <div class="icon"></div>
-        <div class="detail">
-            <div class="name"></div>
-            <div class="talk"></div>
-        </div>
-    </div>
+    {% for friendship in friendships %}
+        <a href="{% url 'talk_room' friendship.friend.id %}" class="to-talkroom">
+            <div class="each">
+                {% if friendship.friend.img %}
+                    <img src="{{ friendship.friend.img.url }}" alt="{{ friendship.friend.username }}" class="icon">
+                {% else %}
+                    <img src="{% static 'myapp/img/people-24px.svg' %}" alt="{{ friendship.friend.username }}" class="icon">
+                {% endif %}
+                <div class="detail">
+                    <div class="name"><strong>{{ friendship.friend.username }}</strong></div>
+                    {% if friendship.latest_message %}
+                        <div class="message-info">
+                            <div class="message-sender">{{ friendship.latest_message_sender }}:{{ friendship.latest_message }}</div>
+                            <div class="latest_talk_time">{{ friendship.latest_message_time|date:"H:i" }}</div>
+                        </div>
+                    {% else %}
+                        <div class="no-message">まだメッセージはありません</div>
+                    {% endif %}
+                </div>
+            </div>
+        </a>
+    
     {% empty %}
+    <div class="empty-container">
         <p class="empty">現在友達はいません</p>
-    {% endfor %}
-</div>  
+    </div>
+    {% endfor %}  
 {% endblock %}
