--- a/myapp/templates/myapp/friends.html
+++ b/myapp/templates/myapp/friends.html
@@ -6,6 +6,10 @@
 <link rel="stylesheet" href="../../static/myapp/css/friends.css">
 {% endblock %}
 {% block content %}
+    <form action="" method="get">
+        <input name="query" value="{{ request.GET.query }}" type="text" placeholder="フレンドの名前を入力してください">
+        <button type="submit">検索する</button>
+    </form>
     {% for friendship in friendships %}
         <a href="{% url 'talk_room' friendship.friend.id %}" class="to-talkroom">
             <div class="each">
@@ -29,8 +33,8 @@
         </a>
     
     {% empty %}
-    <div class="empty-container">
-        <p class="empty">現在友達はいません</p>
-    </div>
+        <div class="empty-container">
+            <p class="empty">{{ no_query_friend }}</p>
+        </div> 
     {% endfor %}  
 {% endblock %}
