--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -33,7 +33,7 @@
          </style>
     </head>
     <body>
-        <div class="login-div"><a href="{% url 'login_view' %}" class="login">ログイン</a></div>
-        <div class="signup-div"><a href="{% url 'signup_view' %}" class="signup">会員登録</a></div>
+        <div class="login-div"><a href="{% url 'account_login' %}" class="login">ログイン</a></div>
+        <div class="signup-div"><a href="{% url 'account_signup' %}" class="signup">会員登録</a></div>
     </body>
 </html>
